# robot_recorder_tutorials

./: .rosinstall  .travis.yml  README.md
record_trajectory/: CMakeLists.txt  package.xml  setup.py
record_trajectory/docs_FINAL/: config.js  index.bundle.js  package.json
record_trajectory/docs_FINAL/static/: recording.json  ur5_with_cam.urdf
record_trajectory/launch/: bringup.launch  config.rviz  demo.launch  record_auto.launch
record_trajectory/scripts/: and_action  execute  record
record_trajectory/src/record_trajectory/: move_trajectory.py
record_trajectory/urdf/: robot.xacro
robot_recorder_tutorials/: CMakeList.txt  package.xml
