<?xml version="1.0"?>
<package format="2">
  <name>record_trajectory</name>
  <version>0.0.1</version>
  <description>The record_trajectory package</description>
  <maintainer email="jonathan.hechtbauer@ipa.fraunhofer.de">Jonathan Hechtbauer</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>moveit_commander</exec_depend>
  <exec_depend>openni_camera</exec_depend>
  <exec_depend>recordit</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>ur5_moveit_config</exec_depend>
  <exec_depend>ur_description</exec_depend>

</package>
